# STM32F7-CMake-Template

./: .clang_complete  CMakeLists.txt  README.md
Drivers/: CMakeLists.txt
User/Source/: main.c  stm32f7xx_it.c
